1.13 -> 1.14:
    - jbj: test for <glob.h>, disable reading directory poptrc files if not.
    - jbj: add __attribute__(__unused__) (Wayne Davison<wayned@samba.org>).
    - jbj: permit equal after short option (Wayne Davison<wayned@samba.org>).
    - jbj: make sure that short options are printed only once with --usage.
    - jbj: don't display hidden short options with --usage.
    - jbj: updated sv.po (Translation Project).
    - jbj: updated {fi,nl}.po (Translation Project).
    - jbj: updated th.po (Translation Project).
    - rsc: avoid multilib file conflicts in generated doxygen.
    - jbj: updated vi.po and zh_CN.po (Translation Project).
    - jbj: fix: keep the poptHelpOptions array exactly the same size.
    - jbj: updated pl.po (Translation Project).
    - jbj: add new fi, th, zh_TW translations (Translation Project).
    - jbj: add "make updatepo" to simplify PO file maintenance.
    - jbj: display POPT_ARG_ARGV options in --help just like other options.
    - jbj: add test for POPT_ARG_ARGV handling.
    - jbj: fix: permit "--foo bar" and "--foo=bar" equivalent forms for aliases.
    - jbj: fix: tests 20 -> 23 require an explicit '--' arg separator now.
    - jbj: popt.3: add POPT_ARG_ARGV description.
    - jbj: use NUL terminator to align help with (possible) multibyte chars.
    - jbj: add utf8_skip_data table[] to keep track of utf8 character widths.
    - jbj: refactor the POPT_WCHAR_HACK into stringDisplayWidth().
    - jbj: add POPT_dgettext() prototype.
    - jbj: add POPT_dgettext() for popt internal UTF-8 codeset (Takao Fujiwara).
    - jbj: add POPT_next_char(), backout POPT_fprintf() usage (for the moment).
    - jbj: finish POPT_ARG_ARGV implementation.
    - jbj: free aliases/execs with common code.
    - jbj: rewrite the callback logic using a switch for simplicity.
    - jbj: hide bit field structure behind F_ISSET/LF_ISSET/CBF_ISSET macros.
    - jbj: expose poptSaveLongLong and poptSaveString in the loader map.